# lex-pass

./: install  lex-pass.cabal  stack.yaml
app/: Main.hs
src/: App.hs  TaskPool.hs  Util.hs
src/Data/: Intercal.hs
src/Data/List/: NonEmpty.hs
src/Lang/Php/: Ast.hs
src/Lang/Php/Ast/: Common.hs  Lex.hs  Stmt.hs  StmtParse.hs  StmtTypes.hs  StmtUnparse.hs  WS.hs
src/Test/: Hm.hs
src/Transf/: FuncManip.hs  Id.hs
test/Lang/Php/: AstSpec.hs
